[package]
name = "druid-huarongdao"
version = "0.1.0"
authors = ["chen <chanble_cn@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "~0.7.0"
num-huarongdao = { path = "../num-huarongdao" }
rand = "~0.8"